# SequenceAnalyzer

./: ._.gitignore  ._README.md  ._Todo.txt  .gitignore  CMakeLists.txt  README.md  Todo.txt
include/: DNASequence.hpp  FastaReader.hpp  ReportWriter.hpp
src/: DNASequence.cpp  FastaReader.cpp  ReportWriter.cpp  main.cpp
